--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-firestore:22.0.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
 }
