--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PlatziConf">
-        <activity android:name="com.example.platziconf.view.ui.activities.SplashScreenActivity" />
+        <activity android:name=".view.ui.fragments.OtraActivity"></activity>
+        <activity android:name=".view.ui.activities.SplashScreenActivity" />
         <activity android:name=".view.ui.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
