todo antes de arreglar los estilos para su correcta visualizacion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,16 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyB6dW95RQ1wnxNvfvPg6rL3rq5oW1aAvYE"/>
 
-        <activity android:name=".view.ui.activities.SplashScreenActivity" />
-        <activity android:name=".view.ui.activities.MainActivity">
+        <activity android:name=".view.ui.activities.SplashScreenActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name=".view.ui.activities.MainActivity">
+
         </activity>
     </application>
 
